theme(fix): better overflow handling for long breadcrumbs
fixes #1

--- a/assets/scss/03-theme/_article.scss
+++ b/assets/scss/03-theme/_article.scss
@@ -47,6 +47,17 @@ article {
   }
 }
 
+.breadcrumb {
+  margin-right: $spacer / 2;
+
+  .breadcrumb-item {
+    float: none;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+}
+
 ////
 /// A container for the article image
 ////
